--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,23 @@
-# Environment files
+# Dependencies
+/node_modules
+
+# Environment variables
 .env
-.env.*
-env/.env.github
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-.venv/
-
-# Flask
-instance/
-.webassets-cache
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-downloads.db
-
-# Logs
+# Local settings
+.claude/
+/dist/
+/out/
 *.log
-logs/
-flask.log
-server.log
-
-# Test files
-test_*.py
-test_*.html
-
-# Backup files
-*_backup.py
-*.bak
-
-# OS
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Downloads
-downloads/
-/downloads/
-tmp/
-/tmp/
-
-# Node
-node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Build outputs
-dist/
-build/
-*.egg-info/
-
-# Claude-specific files
-# CLAUDE.md is intentionally tracked for project documentation
+/coverage/
+.npm
+.eslintcache
+.DS_Store
+non-electron-backup.zip
+downloads.db
+test_*.py
+test_*.html
+app_backup.py
